--- a/1.4/deploy_svc_node.yaml
+++ b/1.4/deploy_svc_node.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: ngnix-svc-node
+  name: nginx-svc-node
 spec:
   selector:
     app: nginx-multitool
