--- a/2.3/ingress_nginx.yaml
+++ b/2.3/ingress_nginx.yaml
@@ -2,6 +2,9 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ingress-web
+  namespace: myweb
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   ingressClassName: nginx
   rules:
@@ -12,7 +15,7 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: my-app-service
+            name: nginx-svc
             port:
               number: 80
   tls:
