--- a/1.5/deploy_back.yaml
+++ b/1.5/deploy_back.yaml
@@ -18,8 +18,16 @@ spec:
       containers:
       - name: multitool
         image: wbitt/network-multitool
+        resources:
+          limits:
+            memory: 512Mi
+            cpu: "1"
+          requests:
+            memory: 256Mi
+            cpu: "0.2"
         env:
         - name: HTTP_PORT
           value: "8801"
         ports:
         - containerPort: 8080
+
