--- a/1.5/deploy_svc.yaml
+++ b/1.5/deploy_svc.yaml
@@ -2,15 +2,28 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nginx-svc
+  namespace: default
 spec:
   selector:
-    app: nginx-multitool
+    app: nginx-front
   ports:
   - name: nginx
-    port: 9001
+    port: 80
     protocol: TCP
     targetPort: 80
-  - name: multitool
-    port: 9002
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: multitool-svc
+  namespace: default
+spec:
+  selector:
+    app: multitool-back
+  ports:
+  - name: nginx
+    port: 8080
     protocol: TCP
-    targetPort: 8080
+    targetPort: 80
