--- a/1.5/deploy_svc.yaml
+++ b/1.5/deploy_svc.yaml
@@ -8,7 +8,7 @@ spec:
     app: nginx-front
   ports:
   - name: nginx
-    port: 80
+    port: 9001
     protocol: TCP
     targetPort: 80
 
@@ -23,7 +23,7 @@ spec:
   selector:
     app: multitool-back
   ports:
-  - name: nginx
-    port: 8080
+  - name: multitool
+    port: 9002
     protocol: TCP
-    targetPort: 80
+    targetPort: 8801
