--- a/2.2/deploy_volume.yaml
+++ b/2.2/deploy_volume.yaml
@@ -2,20 +2,16 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: pv-vol
-  namespace: myvolume
 spec:
   capacity:
-    storage: 10Gi
+    storage: 2Gi
   volumeMode: Filesystem
   accessModes:
   - ReadWriteOnce
-  persistentVolumeReclaimPolicy: Recycle
-  storageClassName: slow
-  mountOptions: hard
-#        - nfsvers=4.0
-    nfs:
-      path: /path/on/nfs/server
-      server: nfs-server-ip-address
+  persistentVolumeReclaimPolicy: Delete
+  storageClassName: ""
+  hostPath:
+    path: "/mnt/data"
 
 ---
 
@@ -25,10 +21,9 @@ metadata:
   name: pvc-vol
   namespace: myvolume
 spec:
-  storageClassName: manual
-  volumeMode: Filesystem
+  storageClassName: ""
   accessModes:
   - ReadWriteOnce
   resources:
     requests:
-      storage: 10Gi
+      storage: 2Gi
